# DegreeMapper-Crawler

./: LICENSE  README.md  justfile  main.py  mypy.ini  pyproject.toml  query.py  queryAPI.py  ruff.toml  scrapy.cfg
database/: chroma.py  embbedings.py  enums.py
ecalendar/: items.py  middlewares.py  pipelines.py  settings.py
ecalendar/spiders/: courses.py  faculty.py  programs.py
ecalender/: items.py  middlewares.py  pipelines.py  settings.py
ecalender/spiders/: programs.py
ecalender_crawler/: courses.py  programs.py
faculty_crawlers/: __init__.py  base.py  crawler.py  enums.py
faculty_crawlers/CS/: crawler.py
pipelines/: embedding_encoder.py  summarizer.py  text_processing.py
